--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -65,6 +65,10 @@ jobs:
         ruby-version: ${{ matrix.cfg.ruby }}
     - name: Install dependencies
       run: bundle install
+    - name: Update postgres
+      run: |
+        sudo sh -c 'echo "deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+        sudo apt-get update && sudo apt-get install postgresql-client-16
     - name: Run tests
       run: bundle exec rspec
       env:
